backend/snapshot/src/snapshots/snapshot__tests__find_related_events-2.snap
---
source: snapshot/src/lib.rs
description: Where Did All the Fun Go?  And How to Bring it Back with FOSS!
info: "../shared/data/model"
---
- distance: 0.4495094448373766
  rounded_distance: 0.45
  event_id: 3544
  event_title: "Defend FOSS: From innovation to world-wide positive change"
- distance: 0.48219686059833017
  rounded_distance: 0.48
  event_id: 1711
  event_title: "[Ending] It's all about the email. Ugh, what?"
- distance: 0.488726044939332
  rounded_distance: 0.49
  event_id: 1808
  event_title: How to Chart your own Career Path in Open Source - Panel Discussion
- distance: 0.4909343220006012
  rounded_distance: 0.49
  event_id: 1776
  event_title: Journey to an open source contribution
- distance: 0.4937178088691214
  rounded_distance: 0.49
  event_id: 2029
  event_title: "Open Source in 2024: boundaries, burnout, business"
- distance: 0.49383220356045937
  rounded_distance: 0.49
  event_id: 2328
  event_title: "Cracking the Code to Executive Support: Open Source Edition"
- distance: 0.4945310848698859
  rounded_distance: 0.49
  event_id: 3163
  event_title: "Copyleft and the GPL: Finding the Path Forward to Defend our Software Right to Repair"
- distance: 0.49627860824260195
  rounded_distance: 0.5
  event_id: 3723
  event_title: FOSDEM 2024 Highlights
- distance: 0.4965630345908026
  rounded_distance: 0.5
  event_id: 3610
  event_title: "Unpack Phabricator, Welcome Phorge - Forking the Opinionated Open Source Project Manager"
- distance: 0.49703406544697043
  rounded_distance: 0.5
  event_id: 3639
  event_title: Roundtable Round-Off on FOSS CMS Collaboration
- distance: 0.5008533901388442
  rounded_distance: 0.5
  event_id: 2305
  event_title: "Open source leadership at scale, how 1300+ people improved Drupal’s multilingual features"
- distance: 0.5082589089929904
  rounded_distance: 0.51
  event_id: 3254
  event_title: The State of OpenJDK
- distance: 0.5082887212569576
  rounded_distance: 0.51
  event_id: 2741
  event_title: Take Your FOSS Project From Surviving To Thriving
- distance: 0.5087188314724481
  rounded_distance: 0.51
  event_id: 1830
  event_title: 20 Years of Open Source building XWiki and CryptPad
- distance: 0.5089729172746421
  rounded_distance: 0.51
  event_id: 3537
  event_title: Open Source Community Updates
- distance: 0.5108454408434555
  rounded_distance: 0.51
  event_id: 3717
  event_title: "FOSS policy engagement: panel"
- distance: 0.5114687033964332
  rounded_distance: 0.51
  event_id: 3113
  event_title: RHEL and CentOS and the growth of openwashing in FOSS
- distance: 0.5118621342240086
  rounded_distance: 0.51
  event_id: 2310
  event_title: Meritocracy or Do-ocracy - why diversity is still hard and what can we do
- distance: 0.5131034225285979
  rounded_distance: 0.51
  event_id: 3671
  event_title: "Compliance as a Community Effort: Engaging Contributors and Users"
- distance: 0.5131090661319034
  rounded_distance: 0.51
  event_id: 3023
  event_title: Welcome to FOSDEM 2024
