backend/snapshot/src/snapshots/snapshot__tests__find_related_events_combined_searchkind-2.snap
---
source: snapshot/src/lib.rs
description: Where Did All the Fun Go?  And How to Bring it Back with FOSS!
info:
  model_dir: "../shared/data/model"
  search_kind: combined
---
items:
  - event_id: 1711
    event_title: "[Ending] It's all about the email. Ugh, what?"
  - event_id: 1776
    event_title: Journey to an open source contribution
  - event_id: 1808
    event_title: How to Chart your own Career Path in Open Source - Panel Discussion
  - event_id: 1830
    event_title: 20 Years of Open Source building XWiki and CryptPad
  - event_id: 2029
    event_title: "Open Source in 2024: boundaries, burnout, business"
  - event_id: 2305
    event_title: "Open source leadership at scale, how 1300+ people improved Drupal’s multilingual features"
  - event_id: 2310
    event_title: Meritocracy or Do-ocracy - why diversity is still hard and what can we do
  - event_id: 2328
    event_title: "Cracking the Code to Executive Support: Open Source Edition"
  - event_id: 2741
    event_title: Take Your FOSS Project From Surviving To Thriving
  - event_id: 3023
    event_title: Welcome to FOSDEM 2024
  - event_id: 3113
    event_title: RHEL and CentOS and the growth of openwashing in FOSS
  - event_id: 3163
    event_title: "Copyleft and the GPL: Finding the Path Forward to Defend our Software Right to Repair"
  - event_id: 3254
    event_title: The State of OpenJDK
  - event_id: 3537
    event_title: Open Source Community Updates
  - event_id: 3544
    event_title: "Defend FOSS: From innovation to world-wide positive change"
  - event_id: 3610
    event_title: "Unpack Phabricator, Welcome Phorge - Forking the Opinionated Open Source Project Manager"
  - event_id: 3639
    event_title: Roundtable Round-Off on FOSS CMS Collaboration
  - event_id: 3671
    event_title: "Compliance as a Community Effort: Engaging Contributors and Users"
  - event_id: 3717
    event_title: "FOSS policy engagement: panel"
  - event_id: 3723
    event_title: FOSDEM 2024 Highlights
ranks:
  - event_id: 1711
    rounded_distance: 0.48
    rank_in_search: 1
  - event_id: 1776
    rounded_distance: 0.49
    rank_in_search: 3
  - event_id: 1808
    rounded_distance: 0.49
    rank_in_search: 2
  - event_id: 1830
    rounded_distance: 0.51
    rank_in_search: 11
  - event_id: 2029
    rounded_distance: 0.49
    rank_in_search: 4
  - event_id: 2305
    rounded_distance: 0.5
    rank_in_search: 10
  - event_id: 2310
    rounded_distance: 0.51
    rank_in_search: 17
  - event_id: 2328
    rounded_distance: 0.49
    rank_in_search: 5
  - event_id: 2741
    rounded_distance: 0.51
    rank_in_search: 13
  - event_id: 3023
    rounded_distance: 0.51
    rank_in_search: 19
  - event_id: 3113
    rounded_distance: 0.51
    rank_in_search: 16
  - event_id: 3163
    rounded_distance: 0.5
    rank_in_search: 6
  - event_id: 3254
    rounded_distance: 0.51
    rank_in_search: 12
  - event_id: 3537
    rounded_distance: 0.51
    rank_in_search: 14
  - event_id: 3544
    rounded_distance: 0.45
    rank_in_search: 0
  - event_id: 3610
    rounded_distance: 0.5
    rank_in_search: 9
  - event_id: 3639
    rounded_distance: 0.5
    rank_in_search: 8
  - event_id: 3671
    rounded_distance: 0.51
    rank_in_search: 18
  - event_id: 3717
    rounded_distance: 0.51
    rank_in_search: 15
  - event_id: 3723
    rounded_distance: 0.5
    rank_in_search: 7
