backend/snapshot/src/snapshots/snapshot__tests__find_related_events_combined_searchkind-3.snap
---
source: snapshot/src/lib.rs
description: "Staying Ahead of the Game: JavaScript Security"
info:
  model_dir: "../shared/data/model"
  search_kind: combined
---
items:
  - event_id: 1665
    event_title: Making Ansible playbooks to configure Single Sign On for popular open source applications
  - event_id: 1822
    event_title: "The MDN Curriculum: Better web developers for a better web"
  - event_id: 1930
    event_title: OpenPrinting - We make printing just work!
  - event_id: 1983
    event_title: Remediating thousands of untracked security vulnerabilities in nixpkgs
  - event_id: 2003
    event_title: Better than loading fast… is loading instantly!
  - event_id: 2125
    event_title: Embeddable code playgrounds for fun and profit
  - event_id: 2186
    event_title: "Better Bee Be Better: spot more bugs than TS with less than JS"
  - event_id: 2231
    event_title: A Lazy Developer’s Approach to Building Real-Time Web Applications
  - event_id: 2273
    event_title: A front-end journey back to Rails
  - event_id: 2288
    event_title: "Cryptography against AI: Deepfake resistant WebRTC videocalls"
  - event_id: 2311
    event_title: Making Python safer than ever
  - event_id: 2326
    event_title: A slow migration from Django templates to Vue+GraphQL
  - event_id: 2352
    event_title: "Stopping all the attacks before they start: Building a security-first API"
  - event_id: 2395
    event_title: The CPAN Security Working Group
  - event_id: 2405
    event_title: Best practices for research in open source ecosystems
  - event_id: 2638
    event_title: "Breaking Barriers: Content Management Systems and Accessibility"
  - event_id: 2722
    event_title: "Your web app is taking up too much RAM. Let's fix it!"
  - event_id: 2832
    event_title: "MessageFormat: The future of i18n on the web"
  - event_id: 3326
    event_title: Web-accessibility for open-source privacy & security tools
  - event_id: 3544
    event_title: "Defend FOSS: From innovation to world-wide positive change"
ranks:
  - event_id: 1665
    rounded_distance: 0.55
    rank_in_search: 19
  - event_id: 1822
    rounded_distance: 0.53
    rank_in_search: 4
  - event_id: 1930
    rounded_distance: 0.54
    rank_in_search: 13
  - event_id: 1983
    rounded_distance: 0.55
    rank_in_search: 18
  - event_id: 2003
    rounded_distance: 0.54
    rank_in_search: 8
  - event_id: 2125
    rounded_distance: 0.54
    rank_in_search: 15
  - event_id: 2186
    rounded_distance: 0.54
    rank_in_search: 10
  - event_id: 2231
    rounded_distance: 0.54
    rank_in_search: 11
  - event_id: 2273
    rounded_distance: 0.53
    rank_in_search: 7
  - event_id: 2288
    rounded_distance: 0.54
    rank_in_search: 9
  - event_id: 2311
    rounded_distance: 0.52
    rank_in_search: 2
  - event_id: 2326
    rounded_distance: 0.54
    rank_in_search: 16
  - event_id: 2352
    rounded_distance: 0.52
    rank_in_search: 1
  - event_id: 2395
    rounded_distance: 0.52
    rank_in_search: 3
  - event_id: 2405
    rounded_distance: 0.5
    rank_in_search: 0
  - event_id: 2638
    rounded_distance: 0.53
    rank_in_search: 6
  - event_id: 2722
    rounded_distance: 0.53
    rank_in_search: 5
  - event_id: 2832
    rounded_distance: 0.54
    rank_in_search: 17
  - event_id: 3326
    rounded_distance: 0.54
    rank_in_search: 14
  - event_id: 3544
    rounded_distance: 0.54
    rank_in_search: 12
