backend/snapshot/src/snapshots/snapshot__tests__find_related_events_videoonly_searchkind-2.snap
---
source: snapshot/src/lib.rs
description: Where Did All the Fun Go?  And How to Bring it Back with FOSS!
info:
  model_dir: "../shared/data/model"
  search_kind: video_only
---
items:
  - event_id: 1665
    event_title: Making Ansible playbooks to configure Single Sign On for popular open source applications
  - event_id: 1711
    event_title: "[Ending] It's all about the email. Ugh, what?"
  - event_id: 1776
    event_title: Journey to an open source contribution
  - event_id: 1801
    event_title: Community Driven Data Collection and Consent in AI
  - event_id: 1953
    event_title: "Using code generated by AI: issues, misconceptions and solutions"
  - event_id: 1970
    event_title: "Automating Spark (and Pipeline) Upgrades While \"Testing\" in Production"
  - event_id: 2256
    event_title: Implementing UDP protocols in Elixir
  - event_id: 2305
    event_title: "Open source leadership at scale, how 1300+ people improved Drupal’s multilingual features"
  - event_id: 2310
    event_title: Meritocracy or Do-ocracy - why diversity is still hard and what can we do
  - event_id: 2328
    event_title: "Cracking the Code to Executive Support: Open Source Edition"
  - event_id: 2346
    event_title: "Synergy: a chat bot framework"
  - event_id: 2379
    event_title: Experimenting with AI and LLM to make docs searchable through a chat application
  - event_id: 2575
    event_title: "Single binary, full-stack provisioning"
  - event_id: 2805
    event_title: Moving a step closer to defining Open Source AI
  - event_id: 3113
    event_title: RHEL and CentOS and the growth of openwashing in FOSS
  - event_id: 3134
    event_title: Another approach to AI
  - event_id: 3276
    event_title: "FOSS for FOSS: DejaCode is your new FOSS control center for SBOMs"
  - event_id: 3358
    event_title: Can SBOMs become first-class citizens in Open Source ecosystems?
  - event_id: 3378
    event_title: VoLTE for FOSS
  - event_id: 3723
    event_title: FOSDEM 2024 Highlights
ranks:
  - event_id: 1665
    rounded_distance: 0.48
    rank_in_search: 5
  - event_id: 1711
    rounded_distance: 0.47
    rank_in_search: 2
  - event_id: 1776
    rounded_distance: 0.5
    rank_in_search: 9
  - event_id: 1801
    rounded_distance: 0.48
    rank_in_search: 3
  - event_id: 1953
    rounded_distance: 0.5
    rank_in_search: 15
  - event_id: 1970
    rounded_distance: 0.5
    rank_in_search: 14
  - event_id: 2256
    rounded_distance: 0.51
    rank_in_search: 19
  - event_id: 2305
    rounded_distance: 0.49
    rank_in_search: 6
  - event_id: 2310
    rounded_distance: 0.5
    rank_in_search: 7
  - event_id: 2328
    rounded_distance: 0.5
    rank_in_search: 11
  - event_id: 2346
    rounded_distance: 0.5
    rank_in_search: 8
  - event_id: 2379
    rounded_distance: 0.5
    rank_in_search: 13
  - event_id: 2575
    rounded_distance: 0.46
    rank_in_search: 0
  - event_id: 2805
    rounded_distance: 0.5
    rank_in_search: 10
  - event_id: 3113
    rounded_distance: 0.5
    rank_in_search: 12
  - event_id: 3134
    rounded_distance: 0.48
    rank_in_search: 4
  - event_id: 3276
    rounded_distance: 0.51
    rank_in_search: 16
  - event_id: 3358
    rounded_distance: 0.51
    rank_in_search: 18
  - event_id: 3378
    rounded_distance: 0.51
    rank_in_search: 17
  - event_id: 3723
    rounded_distance: 0.47
    rank_in_search: 1
