backend/snapshot/src/snapshots/snapshot__tests__find_related_events_videoonly_searchkind-3.snap
---
source: snapshot/src/lib.rs
description: "Staying Ahead of the Game: JavaScript Security"
info:
  model_dir: "../shared/data/model"
  search_kind: video_only
---
items:
  - event_id: 1665
    event_title: Making Ansible playbooks to configure Single Sign On for popular open source applications
  - event_id: 1822
    event_title: "The MDN Curriculum: Better web developers for a better web"
  - event_id: 1983
    event_title: Remediating thousands of untracked security vulnerabilities in nixpkgs
  - event_id: 2182
    event_title: "Besides Web: a Worker story."
  - event_id: 2288
    event_title: "Cryptography against AI: Deepfake resistant WebRTC videocalls"
  - event_id: 2310
    event_title: Meritocracy or Do-ocracy - why diversity is still hard and what can we do
  - event_id: 2311
    event_title: Making Python safer than ever
  - event_id: 2326
    event_title: A slow migration from Django templates to Vue+GraphQL
  - event_id: 2352
    event_title: "Stopping all the attacks before they start: Building a security-first API"
  - event_id: 2395
    event_title: The CPAN Security Working Group
  - event_id: 2405
    event_title: Best practices for research in open source ecosystems
  - event_id: 2443
    event_title: How can we trust 3rd party code? Using Python to understand the trust relationships within the python ecosystem
  - event_id: 2638
    event_title: "Breaking Barriers: Content Management Systems and Accessibility"
  - event_id: 2781
    event_title: "How to get rid of Confluence: Comparing Open Source Knowledgemanagent Systems"
  - event_id: 2832
    event_title: "MessageFormat: The future of i18n on the web"
  - event_id: 2876
    event_title: "MatrixRTC: The Future of Matrix Calls"
  - event_id: 2920
    event_title: "Know Your Ingredients: Security Starts With the SBOM"
  - event_id: 3370
    event_title: "An engineer's guide to Linux Kernel upgrades"
  - event_id: 3622
    event_title: "Panel discussion: Software Naming"
  - event_id: 3723
    event_title: FOSDEM 2024 Highlights
ranks:
  - event_id: 1665
    rounded_distance: 0.51
    rank_in_search: 15
  - event_id: 1822
    rounded_distance: 0.52
    rank_in_search: 19
  - event_id: 1983
    rounded_distance: 0.5
    rank_in_search: 6
  - event_id: 2182
    rounded_distance: 0.51
    rank_in_search: 17
  - event_id: 2288
    rounded_distance: 0.51
    rank_in_search: 14
  - event_id: 2310
    rounded_distance: 0.51
    rank_in_search: 16
  - event_id: 2311
    rounded_distance: 0.47
    rank_in_search: 0
  - event_id: 2326
    rounded_distance: 0.51
    rank_in_search: 13
  - event_id: 2352
    rounded_distance: 0.51
    rank_in_search: 9
  - event_id: 2395
    rounded_distance: 0.48
    rank_in_search: 2
  - event_id: 2405
    rounded_distance: 0.49
    rank_in_search: 4
  - event_id: 2443
    rounded_distance: 0.5
    rank_in_search: 8
  - event_id: 2638
    rounded_distance: 0.5
    rank_in_search: 7
  - event_id: 2781
    rounded_distance: 0.51
    rank_in_search: 12
  - event_id: 2832
    rounded_distance: 0.51
    rank_in_search: 10
  - event_id: 2876
    rounded_distance: 0.51
    rank_in_search: 11
  - event_id: 2920
    rounded_distance: 0.48
    rank_in_search: 1
  - event_id: 3370
    rounded_distance: 0.5
    rank_in_search: 5
  - event_id: 3622
    rounded_distance: 0.51
    rank_in_search: 18
  - event_id: 3723
    rounded_distance: 0.49
    rank_in_search: 3
