backend/snapshot/src/snapshots/snapshot__tests__phrase_search.snap
---
source: snapshot/src/lib.rs
expression: similar
---
- distance: 0.6884902032907187
  rounded_distance: 0.69
  event_id: 2405
  event_title: Best practices for research in open source ecosystems
- distance: 0.6945371774062765
  rounded_distance: 0.69
  event_id: 2779
  event_title: "Staying Ahead of the Game: JavaScript Security"
- distance: 0.6971099789086412
  rounded_distance: 0.7
  event_id: 1930
  event_title: OpenPrinting - We make printing just work!
- distance: 0.697975287430046
  rounded_distance: 0.7
  event_id: 3134
  event_title: Another approach to AI
- distance: 0.7006308115511992
  rounded_distance: 0.7
  event_id: 2747
  event_title: "For Want of Anneal: Examining The Unseen Changes Concerning Changes To VCS Assets and The Need For More Graph Centric Approaches"
- distance: 0.7019730046401185
  rounded_distance: 0.7
  event_id: 2866
  event_title: "Making API Terms of Service Trustworthy? Presenting FACT : The Fair API Commitment Terms"
- distance: 0.7035085263300751
  rounded_distance: 0.7
  event_id: 3553
  event_title: Learning from disaster response teams to save the internet
- distance: 0.7043562493209279
  rounded_distance: 0.7
  event_id: 3668
  event_title: "Hot Topics: Organizers of the Legal & Policy DevRoom discuss the issues of the day"
- distance: 0.7050657161828311
  rounded_distance: 0.71
  event_id: 2638
  event_title: "Breaking Barriers: Content Management Systems and Accessibility"
- distance: 0.7055400049860489
  rounded_distance: 0.71
  event_id: 3544
  event_title: "Defend FOSS: From innovation to world-wide positive change"
- distance: 0.7069287942388786
  rounded_distance: 0.71
  event_id: 3163
  event_title: "Copyleft and the GPL: Finding the Path Forward to Defend our Software Right to Repair"
- distance: 0.7077077121574527
  rounded_distance: 0.71
  event_id: 3113
  event_title: RHEL and CentOS and the growth of openwashing in FOSS
- distance: 0.7084080793696588
  rounded_distance: 0.71
  event_id: 3717
  event_title: "FOSS policy engagement: panel"
- distance: 0.7086130969402366
  rounded_distance: 0.71
  event_id: 2750
  event_title: "Codes Bound by Ethics: The Rising Tide of Non-Free Software Licenses in AI ecosystems"
- distance: 0.710486307096886
  rounded_distance: 0.71
  event_id: 2079
  event_title: "Fortify AI against regulation, litigation and lobotomies"
- distance: 0.7106596488330573
  rounded_distance: 0.71
  event_id: 2310
  event_title: Meritocracy or Do-ocracy - why diversity is still hard and what can we do
- distance: 0.7108114986401424
  rounded_distance: 0.71
  event_id: 1953
  event_title: "Using code generated by AI: issues, misconceptions and solutions"
- distance: 0.7110709188763001
  rounded_distance: 0.71
  event_id: 3364
  event_title: Why not run OpenCL-accelerated LLM on your phone?
- distance: 0.7113728605409577
  rounded_distance: 0.71
  event_id: 3234
  event_title: A journey accross the environmental materiality of digital services
- distance: 0.7118929963742723
  rounded_distance: 0.71
  event_id: 3704
  event_title: "Fireside Chat on Further Restrictions, Imposed Downstream on Copyleft, Wreaking Havoc"
